added first header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <div class="wrapper">
         <header class="top-header">
             <div class="inner">
-                
+                <nav class="popular_destinations">
+                    <div>Popular Destination</div>
+                    <a href="#">Kuala Lumpur</a>
+                    <a href="#">Kuala Lumpur</a>
+                    <a href="#">Dubai</a>
+                    <a href="#">Paris</a>
+                    <a href="#">Bangkok</a>
+                </nav>
             </div>
 
         </header>
