added hero section

--- a/index.html
+++ b/index.html
@@ -12,14 +12,45 @@
         <header class="top-header">
             <div class="inner">
                 <nav class="popular_destinations">
-                    <div>Popular Destination</div>
-                    <a href="#">Kuala Lumpur</a>
-                    <a href="#">Kuala Lumpur</a>
-                    <a href="#">Dubai</a>
-                    <a href="#">Paris</a>
-                    <a href="#">Bangkok</a>
+                    <div>Popular Destinations:</div>
+                    <a href="#">Bogotá</a>
+                    <a href="#">Medellín</a>
+                    <a href="#">Cali</a>
+                    <a href="#">Cartagena</a>
+                    <a href="#">Manizales</a>
                 </nav>
             </div>
+            <div class="header">
+                <div class="inner header_inner">
+                    <div class="logo">
+                        <span>Travel</span>Land
+                    </div>
+
+                    <nav class="page_menu">
+                            <a href="#" class="active">Home</a><a href="#">About</a><a href="#">Tours</a><a href="#">Blog</a><a href="#">Contact</a>
+
+                    </nav>
+                    <div class="phone">
+                        <img src="assets/img/phone.svg" alt="phone_icon" class="phone-img">
+                            <span>011 234 567 999</span>
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="hero_header">
+                <div class="inner hero_header_inner">
+                    <div class="hero_content">
+                        <img src="assets/img/summer.svg" alt="summer">
+                        <div class="sub_head_line">Curated list of trips in Colombia</div>
+                        <a href="#" class="button">Explore Now</a>
+
+                    </div>
+
+
+                </div>
+            </div>
+            
 
         </header>
 
